@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-11T08:23:33Z",
-  "count_outdated" : 2392,
-  "uniques_outdated" : 574,
-  "count" : 2438,
-  "uniques" : 607,
+  "timestamp" : "2022-09-11T16:26:57Z",
+  "count_outdated" : 2395,
+  "uniques_outdated" : 576,
+  "count" : 2441,
+  "uniques" : 608,
   "clones" : [
-    {
-      "timestamp": "2022-08-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 2,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
