@@ -1,3 +1,11 @@
+2022-09-11T16:26:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3032525370
+* notice: last 14d: unq all: 19 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 574 2392 / 607 2438
+* notice: next accum: outdated-unq outdated-all / unq all: 576 2395 / 608 2441
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-08-28] / [2022-09-11]
+
 2022-09-11T08:23:33Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3031110688
 * notice: last 14d: unq all: 19 46
